# mathom

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  compose.gpu.yaml  compose.yaml  package.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  deps.py  main.py  models.py  ratelimit.py  schemas.py  seed.py
backend/app/routers/: auth.py  chat.py  collections.py  health.py  invitations.py  mathoms.py  search.py  settings.py  tags.py  templates.py  users.py
backend/app/services/: auth.py  diarization.py  documents.py  export.py  invitations.py  jobs.py  ollama.py  passwords.py  pipeline.py  tags.py  template_localization.py  transcription.py  vision.py  worker.py
backend/tests/: conftest.py  test_auth_enabled.py  test_chat.py  test_collections.py  test_diarization.py  test_health.py  test_invitations.py  test_invitations_email.py  test_jobs.py  test_mathoms.py  test_pipeline.py  test_ratelimit.py  test_search.py  test_tags.py  test_templates.py  test_vision.py
docker/: nginx.conf  supervisord.conf
docs/: api.md  architecture.md  authentication.md  deployment.md  pwa.md  threat-model.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
prompt-templates/: action-items.json  calendar-events.json  crm-entry.json  customer-call.json  email-draft.json  executive-brief.json  general-summary.json  github-issue.json  jira-issue.json  meeting-minutes.json  technical-discussion.json  (+1 more)
(+61 files in other folders)
