[project]
name = "mathom-backend"
version = "0.1.0"
description = "mathom (backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy>=2.0,<3",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "httpx>=0.27,<1",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2",
    "argon2-cffi>=23.1",
]

[project.optional-dependencies]
ml = [
    "faster-whisper>=1.0,<2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
# B008: `Depends(...)` in argument defaults is the canonical FastAPI pattern.
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.routers", "app.services"]
